added more documentation to jupyter stuff

--- a/learning_observer/reducer_testing.ipynb
+++ b/learning_observer/reducer_testing.ipynb
@@ -28,20 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading execution DAG from example_mod\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n",
-      "Socket closed.\n"
+      "Loading execution DAG from example_mod\n"
      ]
     }
    ],
@@ -54,14 +41,66 @@
     "# add endpoint\n",
     "learning_observer.jupyter_helpers.add_reducer_to_execution_dag(ID, event_counter, module, {'event_count': 0})\n",
     "# start communication protocol endpoint\n",
+    "# await learning_observer.jupyter_helpers.serve_communication_protocol_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d98eb911-a126-47c2-84b0-15a339b48c32",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a414036da879435bbb173f4622647fc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Start Server', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03905021d2014b029cc9dfaf27a3f241",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Stop Server', disabled=True, style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# start communication protocol endpoint\n",
     "await learning_observer.jupyter_helpers.serve_communication_protocol_endpoint()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "77b3cd68-839e-46f7-b93b-b44aac5d5276",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -78,7 +117,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8afc1d7a60>"
+       "<IPython.lib.display.IFrame at 0x7f50c8629e40>"
       ]
      },
      "metadata": {},
@@ -162,16 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "b731c105-a267-461c-aa84-399b4c2ee04e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7f8aec58d090>\n",
-      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7f8aec629750>\n"
+      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7f2bcc484d30>\n",
+      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7f2bcc3edc60>\n"
      ]
     },
     {
@@ -180,7 +225,7 @@
        "(1214, 'localhost.testcase', 'Tester')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +248,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "643b140f-ceb7-43f3-b90a-4931529daaa5",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6b0f24c-3df0-48f9-a655-6181c2695cd9",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
