--- a/learning_observer/reducer_testing.ipynb
+++ b/learning_observer/reducer_testing.ipynb
@@ -47,52 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d98eb911-a126-47c2-84b0-15a339b48c32",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a414036da879435bbb173f4622647fc9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Start Server', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03905021d2014b029cc9dfaf27a3f241",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Stop Server', disabled=True, style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# start communication protocol endpoint\n",
-    "await learning_observer.jupyter_helpers.serve_communication_protocol_endpoint()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "77b3cd68-839e-46f7-b93b-b44aac5d5276",
    "metadata": {
     "editable": true,
@@ -117,7 +71,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f50c8629e40>"
+       "<IPython.lib.display.IFrame at 0x7f6ab19dbfa0>"
       ]
      },
      "metadata": {},
@@ -130,32 +84,47 @@
     "# in a markdown format.\n",
     "import dash\n",
     "from dash import Dash, html, dcc, callback, Output, Input, State, clientside_callback, Patch\n",
-    "import datetime\n",
+    "import time\n",
     "import json\n",
     "import lo_dash_react_components as lodrc\n",
+    "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "\n",
     "app = Dash(__name__)\n",
     "\n",
-    "fig = go.Figure()\n",
+    "fig = go.Figure(data=go.Scatter(\n",
+    "    x=pd.Series(dtype=object), y=pd.Series(dtype=object),\n",
+    "    # labels=dict(x='Time', y='Event counter')\n",
+    "))\n",
     "\n",
     "app.layout = html.Div([\n",
     "    html.H4('Graph of event count'),\n",
     "    dcc.Graph(id='graph', figure=fig),\n",
     "    html.H4('Incoming data.'),\n",
-    "    dcc.Markdown(id='out'),\n",
-    "    lodrc.LOConnection(id='ws', url='ws://localhost:8765/ws')\n",
+    "    lodrc.LOConnection(id='ws', url='ws://localhost:9999/wsapi/communication_protocol')\n",
     "])\n",
     "\n",
     "clientside_callback(\n",
     "    '''function(msg) {\n",
-    "        console.log(msg)\n",
     "        if (!msg) {\n",
     "            return window.dash_clientside.no_update;\n",
     "        }\n",
-    "        // TODO extract the event count and then add it to a graph that also does not yet exist\n",
-    "        return `\\`\\`\\`json\\n${JSON.stringify(JSON.parse(msg.data), null, 2)}\\n\\`\\`\\``; }''',\n",
-    "    Output('out', 'children'),\n",
+    "        const data = JSON.parse(msg.data);\n",
+    "        const students = data.test.event_count;\n",
+    "        console.log(students);\n",
+    "        if (students.length === 0) {\n",
+    "            console.log('inside')\n",
+    "            return window.dash_clientside.no_update;\n",
+    "        }\n",
+    "        const studentIndex = 0;\n",
+    "        const x = [Date.now() / 1000];\n",
+    "        const y = [students[studentIndex].event_count];\n",
+    "        return [\n",
+    "            { x: [x], y: [y] },\n",
+    "            [0]\n",
+    "        ];\n",
+    "    }''',\n",
+    "    Output('graph', 'extendData'),\n",
     "    Input('ws', 'message')\n",
     ")\n",
     "# Send connection information on the websocket when the connected\n",
@@ -172,36 +141,13 @@
     "    Input('ws', 'state')\n",
     ")\n",
     "\n",
-    "@callback(\n",
-    "    Output('graph', 'figure'),\n",
-    "    Input('ws', 'message')\n",
-    "    # NOTE it is best practice to use a clientside\n",
-    "    # callback for websockets. Regular callbacks\n",
-    "    # will make more network requests than needed.\n",
-    "    # We use a regular callback here to demonstrate\n",
-    "    # some graphing capabilities.\n",
-    ")\n",
-    "def update_graph(msg):\n",
-    "    if msg is None:\n",
-    "        raise dash.exceptions.PreventUpdate\n",
-    "    now = datetime.datetime.now()\n",
-    "    data_raw = msg.get('data', {})\n",
-    "    students = json.loads(data_raw).get('test', {}).get('event_count', [])\n",
-    "    if len(students) == 0:\n",
-    "        raise dash.exceptions.PreventUpdate\n",
-    "    count = students[0].get('event_count', {})\n",
-    "    p = Patch()\n",
-    "    p['data'][0]['x'].append(now)\n",
-    "    p['data'][0]['y'].append(count)\n",
-    "    return p\n",
-    "\n",
     "\n",
     "app.run_server(jupyter_mode='inline', debug=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "b731c105-a267-461c-aa84-399b4c2ee04e",
    "metadata": {
     "editable": true,
@@ -215,8 +161,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7f2bcc484d30>\n",
-      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7f2bcc3edc60>\n"
+      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7ff8989f2cb0>\n",
+      "<function kvs_pipeline.<locals>.decorator.<locals>.wrapper_closure.<locals>.process_event at 0x7ff899b1aa70>\n"
      ]
     },
     {
@@ -225,7 +171,7 @@
        "(1214, 'localhost.testcase', 'Tester')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,29 +192,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "643b140f-ceb7-43f3-b90a-4931529daaa5",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "execution_count": 4,
+   "id": "076828be-3425-4eb7-a608-2a1a30b6ae4a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import learning_observer.stream_analytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8bd472f-5fc9-45b9-b51a-2dbaa1adc21e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"org.mitros.mirror\": [\n",
+      "    {\n",
+      "      \"reducer\": \"<function init.<locals>.<lambda> at 0x7f6ab193b9a0>\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"org.mitros.writing_analytics\": [\n",
+      "    {\n",
+      "      \"reducer\": \"<function time_on_task at 0x7f6ab8afcee0>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>, <EventField.doc_id>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function reconstruct at 0x7f6ab8afd000>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>, <EventField.doc_id>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function event_count at 0x7f6ab8afd120>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function document_list at 0x7f6ab8afd480>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function last_document at 0x7f6ab8afd5a0>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function document_tagging at 0x7f6ab8afd360>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function document_access_timestamps at 0x7f6ab8afd240>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>})\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"reducer\": \"<function event_counter at 0x7f6ab193b370>\",\n",
+      "      \"scope\": \"Scope({<KeyField.STUDENT: 1>})\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(json.dumps(learning_observer.stream_analytics.REDUCER_MODULES, indent=2, default=str))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b0f24c-3df0-48f9-a655-6181c2695cd9",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "33f8ae59-dfbc-4140-a96f-89c576779dad",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
