--- a/learning_observer/reducer_testing.ipynb
+++ b/learning_observer/reducer_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4a7dd2a2-0337-49de-aad1-4f4acc3857ae",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "169ee920-e84a-489c-8a47-eeadfbb84ba2",
    "metadata": {},
    "outputs": [
@@ -42,13 +42,13 @@
     "ID = 'event_counter'\n",
     "module = 'example_mod'\n",
     "\n",
-    "import learning_observer.jupyter_helpers\n",
-    "learning_observer.jupyter_helpers.add_reducer_to_lo(ID, event_counter, module, {'event_count': 0})"
+    "import learning_observer.interactive_development\n",
+    "learning_observer.interactive_development.add_reducer_to_lo(ID, event_counter, module, {'event_count': 0})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "77b3cd68-839e-46f7-b93b-b44aac5d5276",
    "metadata": {
     "editable": true,
@@ -73,7 +73,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc8447675b0>"
+       "<IPython.lib.display.IFrame at 0x7fae002d9360>"
       ]
      },
      "metadata": {},
@@ -113,6 +113,7 @@
     "        }\n",
     "        // extract data from message\n",
     "        const data = JSON.parse(msg.data);\n",
+    "        console.log(data);\n",
     "        const students = data.test.event_count;\n",
     "        if (students === undefined) { return window.dash_clientside.no_update; }\n",
     "        if (students.length === 0) {\n",
@@ -153,6 +154,56 @@
     "# These callbacks are from other dashboards.\n",
     "app.run_server(jupyter_mode='inline', suppress_callback_exceptions=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1be8bd5b-35a6-4632-9c0f-8bf8e12087a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "246"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=123\n",
+    "x+2\n",
+    "x+x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ec89e2d0-630a-4952-b5ba-c89300688294",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cc40e52-63e6-4df9-a332-d01df71fd7a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
