--- a/learning_observer/reducer_testing.ipynb
+++ b/learning_observer/reducer_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4a7dd2a2-0337-49de-aad1-4f4acc3857ae",
    "metadata": {},
    "outputs": [],
@@ -19,36 +19,60 @@
     "    '''\n",
     "    if state is None:\n",
     "        state = {}\n",
-    "    state['event_count'] = state.get('event_count', 0) + 1\n",
+    "    state['event_count'] = state.get('event_count', 0) - 1\n",
     "    return state, state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "169ee920-e84a-489c-8a47-eeadfbb84ba2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading execution DAG from example_mod\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Implement reducer into system with our h\n",
     "ID = 'event_counter'\n",
     "module = 'example_mod'\n",
     "\n",
     "import learning_observer.interactive_development\n",
-    "learning_observer.interactive_development.add_reducer_to_lo(ID, event_counter, module, {'event_count': 0})"
+    "await learning_observer.interactive_development.reload_reducer(ID, event_counter, module=module, default={'event_count': 0}, create_new=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "e70bd437-cbb5-4848-a48e-57c68cf96527",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import learning_observer.kvs\n",
+    "\n",
+    "kvs = learning_observer.kvs.KVS()\n",
+    "len(await kvs.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d818949-741a-42e2-85a4-ac7c9dd79be7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "77b3cd68-839e-46f7-b93b-b44aac5d5276",
    "metadata": {
     "editable": true,
@@ -73,7 +97,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fae002d9360>"
+       "<IPython.lib.display.IFrame at 0x7ff37843e290>"
       ]
      },
      "metadata": {},
@@ -157,50 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1be8bd5b-35a6-4632-9c0f-8bf8e12087a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "246"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x=123\n",
-    "x+2\n",
-    "x+x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ec89e2d0-630a-4952-b5ba-c89300688294",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "9cc40e52-63e6-4df9-a332-d01df71fd7a4",
+   "id": "4449c151-2119-432c-85d8-6c6a8cf64457",
    "metadata": {},
    "outputs": [],
    "source": []
