--- a/learning_observer/reducer_testing.ipynb
+++ b/learning_observer/reducer_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4a7dd2a2-0337-49de-aad1-4f4acc3857ae",
    "metadata": {},
    "outputs": [],
@@ -25,36 +25,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "169ee920-e84a-489c-8a47-eeadfbb84ba2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Implement reducer into system with our h\n",
     "ID = 'event_counter'\n",
     "module = 'example_mod'\n",
     "\n",
     "import learning_observer.interactive_development\n",
-    "await learning_observer.interactive_development.reload_reducer(ID, event_counter, module=module, default={'event_count': 0}, create_new=True)"
+    "reducer = learning_observer.interactive_development.construct_reducer(ID, event_counter, module=module, default={'event_count': 0})\n",
+    "await learning_observer.interactive_development.hot_load_reducer(reducer, reload=True, migration_function=learning_observer.interactive_development.DROP_DATA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e70bd437-cbb5-4848-a48e-57c68cf96527",
+   "execution_count": 5,
+   "id": "0a1ca8fe-5ccc-41c6-8391-5e8b9c66cabc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'context': 'org.mitros.writing_analytics', 'function': <function time_on_task at 0x7f94e31c5d80>, 'scope': Scope({<KeyField.STUDENT: 1>, <EventField.doc_id>}), 'default': {'saved_ts': 0}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.time_on_task'}, {'context': 'org.mitros.writing_analytics', 'function': <function reconstruct at 0x7f94e31c5ea0>, 'scope': Scope({<KeyField.STUDENT: 1>, <EventField.doc_id>}), 'default': {'text': ''}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.reconstruct'}, {'context': 'org.mitros.writing_analytics', 'function': <function event_count at 0x7f94e31c5fc0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.event_count'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_list at 0x7f94e31c6320>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'docs': []}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_list'}, {'context': 'org.mitros.writing_analytics', 'function': <function last_document at 0x7f94e31c6440>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'document_id': ''}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.last_document'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_tagging at 0x7f94e31c6200>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'tags': {}}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_tagging'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_access_timestamps at 0x7f94e31c60e0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'timestamps': {}}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_access_timestamps'}, {'context': 'org.mitros.writing_analytics', 'function': <function event_counter at 0x7f94da3a43a0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'event_count': 0}, 'module': 'example_mod', 'id': 'event_counter'}]\n"
+     ]
     }
    ],
+   "source": [
+    "import learning_observer.module_loader \n",
+    "print(learning_observer.module_loader.reducers())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70bd437-cbb5-4848-a48e-57c68cf96527",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import learning_observer.kvs\n",
     "\n",
@@ -68,11 +85,14 @@
    "id": "6d818949-741a-42e2-85a4-ac7c9dd79be7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = None\n",
+    "x is not None"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "77b3cd68-839e-46f7-b93b-b44aac5d5276",
    "metadata": {
     "editable": true,
@@ -81,29 +101,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7ff37843e290>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a dashboard to connect to the reducer you just wrote\n",
     "# This dashboard creates a graph for \"Total events over time\"\n",
