added unique token

--- a/learning_observer/reducer_testing.ipynb
+++ b/learning_observer/reducer_testing.ipynb
@@ -25,18 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "169ee920-e84a-489c-8a47-eeadfbb84ba2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Implement reducer into system with our h\n",
     "ID = 'event_counter'\n",
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0a1ca8fe-5ccc-41c6-8391-5e8b9c66cabc",
    "metadata": {},
    "outputs": [
@@ -57,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'context': 'org.mitros.writing_analytics', 'function': <function time_on_task at 0x7f94e31c5d80>, 'scope': Scope({<KeyField.STUDENT: 1>, <EventField.doc_id>}), 'default': {'saved_ts': 0}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.time_on_task'}, {'context': 'org.mitros.writing_analytics', 'function': <function reconstruct at 0x7f94e31c5ea0>, 'scope': Scope({<KeyField.STUDENT: 1>, <EventField.doc_id>}), 'default': {'text': ''}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.reconstruct'}, {'context': 'org.mitros.writing_analytics', 'function': <function event_count at 0x7f94e31c5fc0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.event_count'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_list at 0x7f94e31c6320>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'docs': []}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_list'}, {'context': 'org.mitros.writing_analytics', 'function': <function last_document at 0x7f94e31c6440>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'document_id': ''}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.last_document'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_tagging at 0x7f94e31c6200>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'tags': {}}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_tagging'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_access_timestamps at 0x7f94e31c60e0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'timestamps': {}}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_access_timestamps'}, {'context': 'org.mitros.writing_analytics', 'function': <function event_counter at 0x7f94da3a43a0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'event_count': 0}, 'module': 'example_mod', 'id': 'event_counter'}]\n"
+      "[{'context': 'org.mitros.writing_analytics', 'function': <function time_on_task at 0x7f88368b1e10>, 'scope': Scope({<EventField.doc_id>, <KeyField.STUDENT: 1>}), 'default': {'saved_ts': 0}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.time_on_task'}, {'context': 'org.mitros.writing_analytics', 'function': <function reconstruct at 0x7f88368b1f30>, 'scope': Scope({<EventField.doc_id>, <KeyField.STUDENT: 1>}), 'default': {'text': ''}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.reconstruct'}, {'context': 'org.mitros.writing_analytics', 'function': <function event_count at 0x7f88368b2050>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.event_count'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_list at 0x7f88368b23b0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'docs': []}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_list'}, {'context': 'org.mitros.writing_analytics', 'function': <function last_document at 0x7f88368b24d0>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'document_id': ''}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.last_document'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_tagging at 0x7f88368b2290>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'tags': {}}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_tagging'}, {'context': 'org.mitros.writing_analytics', 'function': <function document_access_timestamps at 0x7f88368b2170>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'timestamps': {}}, 'module': <module 'writing_observer.module' from '/home/brad/github/writing_observer/modules/writing_observer/writing_observer/module.py'>, 'id': 'writing_observer.document_access_timestamps'}, {'context': 'org.mitros.writing_analytics', 'function': <function event_counter at 0x7f882c178c10>, 'scope': Scope({<KeyField.STUDENT: 1>}), 'default': {'event_count': 0}, 'module': 'example_mod', 'id': 'event_counter'}]\n"
      ]
     }
    ],
@@ -68,10 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e70bd437-cbb5-4848-a48e-57c68cf96527",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "211"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import learning_observer.kvs\n",
     "\n",
@@ -81,18 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d818949-741a-42e2-85a4-ac7c9dd79be7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = None\n",
-    "x is not None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "77b3cd68-839e-46f7-b93b-b44aac5d5276",
    "metadata": {
     "editable": true,
@@ -101,7 +93,29 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f882f30ee90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create a dashboard to connect to the reducer you just wrote\n",
     "# This dashboard creates a graph for \"Total events over time\"\n",
